	* Added support for PURPLE_GNUTLS_PRIORITIES environment variable.
	  This can be used to specify GnuTLS priorities on a per-host basis.
	  The format is "host=priority;host2=priority;...".  The default
	  priority can be overridden by using "*" as the host.  See the
	  GnuTLS manual for documentation on the format of the priority
	  strings.
	* Fix autoconf detection of Python.  (Brad Smith)

	Pidgin:
	* Moved the "Debugging Information" section of the About box to a
	  "Build Information" dialog accessible on the Help menu.
	* Moved the Developer and Crazy Patch Writer information from the About
	  box to a "Developer Information" dialog accessible on the Help menu.
	* Moved the Translator information from the About box to a "Translator
	  Information" dialog accessible on the Help menu.
	* Use GtkStatusIcon for the docklet, providing better integration in
	  notification area.
	* Added UI for sending attentions (buzz, nudge) on supporting protocols.
	* Make the search dialog unobtrusive in the conversation window (by
	  making it look and behave like the search dialog in Firefox)
	* The Recent Log Activity sort method for the Buddy List now
	  distinguishes between no activity and a small amount of activity
	  in the distant past.  (Greg McNew)
	* Added a menu set mood globally for all mood-supporting accounts
	  (currently XMPP and ICQ).
	* Default binding of Ctrl+Shift+v to 'Paste as Plain Text' in
	  conversation windows. This can be changed in .gtkrc-2.0. For example,
	  Ctrl+v can be bound to 'Paste as Plain Text' by default.
	* Plugins can now handle markup in buddy names by attaching to the signal
	  "drawing-buddy". (Daniele Ricci, Andrea Piccinelli)
	* Be more accommodating when scaling down large images for use as
	  buddy icons.
	* The 'Message Timestamp Formats' plugin allows changing the timestamp
	  format from the timestamps' context menu in conversation log.
	* Fix pastes from Chrome (rich-text pastes and probably URLs